# tui-wbs

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  project.wbs.md  pyproject.toml
docs/tui-wbs/: review-prompt.md  stakeholder-analysis.md  tui-wbs.prd.md
src/tui_wbs/: __init__.py  __main__.py  app.py  cli.py  commands.py  config.py  default_settings.yaml  default_theme.yaml  demo_data.py  export.py  filelock.py  models.py  parser.py  theme.py  writer.py
src/tui_wbs/demo/: demo.wbs.md
src/tui_wbs/demo/.tui-wbs/: config.toml
src/tui_wbs/screens/: column_width_screen.py  confirm_screen.py  edit_screen.py  filter_screen.py  help_screen.py  node_edit_screen.py  select_screen.py  warning_screen.py
src/tui_wbs/themes/: catppuccin_frappe.yaml  catppuccin_latte.yaml  catppuccin_macchiato.yaml  catppuccin_mocha.yaml  default_dark.yaml  default_light.yaml  one_dark.yaml  one_light.yaml  tokyo_night.yaml  tokyo_night_light.yaml  tokyo_night_storm.yaml
src/tui_wbs/widgets/: filter_bar.py  gantt_chart.py  kanban_board.py  settings_modal.py  view_tabs.py  wbs_table.py
tests/: test_app.py  test_app_features.py  test_backlog_features.py  test_commands.py  test_config.py  test_demo.py  test_export.py  test_filelock.py  test_gantt.py  test_kanban.py  test_models.py  test_parser.py  test_roundtrip.py  test_writer.py
