[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui-wbs"
version = "0.1.0"
description = "Terminal UI Work Breakdown Structure Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Gihwan Kim" },
]
dependencies = [
    "textual>=8.0.0,<9.0.0",
    "click>=8.0.0,<9.0.0",
    "tomlkit>=0.14.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
tui-wbs = "tui_wbs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tui_wbs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.0.0",
]
